Remove item da lista

--- a/app/src/main/res/layout/activity_formulario_personagens.xml
+++ b/app/src/main/res/layout/activity_formulario_personagens.xml
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/button_enviar"
-        android:layout_width="138dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="enviar" />
 </LinearLayout>
