--- a/app/src/main/res/layout/activity_formulario_personagens.xml
+++ b/app/src/main/res/layout/activity_formulario_personagens.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.actvities.FormularioPersonagensActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
 
     <EditText
         android:id="@+id/edittext_Nome"
@@ -35,5 +41,7 @@
         android:id="@+id/button_enviar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="enviar" />
-</LinearLayout>
+        android:text="enviar"
+        android:visibility="gone"/>
+    </LinearLayout>
+</ScrollView>
