Adição de Icone, campos de RG cep telefone, genero e Endereço

--- a/app/src/main/res/layout/activity_formulario_personagens.xml
+++ b/app/src/main/res/layout/activity_formulario_personagens.xml
@@ -76,5 +76,13 @@
             android:inputType="textPostalAddress"
             android:hint="Cep"/>
 
+        <EditText
+            android:id="@+id/editText_Endereco"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:hint="Endereço" />
+
     </LinearLayout>
 </ScrollView>
